fix: modal form z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -5982,7 +5982,7 @@ input:checked + .slider:before {
 .modal {
   display: none; /* Скрыто по умолчанию */
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
